--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
-    "sass": "^1.69.0",
-    "sass-loader": "^13.3.2",
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4"
+    "sass-loader": "^13.3.2"
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.1",
-    "puppeteer": "^24.34.0"
+    "puppeteer": "^24.34.0",
+    "sass": "^1.69.0",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": ">=16.0.0",
