--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "db:create": "mysql -u root -p -e 'CREATE DATABASE IF NOT EXISTS mentorship_wp;'",
     "db:import": "mysql -u root -p mentorship_wp < database/backup.sql",
     "db:export": "mysqldump -u root -p mentorship_wp > database/backup.sql",
-    "theme:watch": "sass --watch wp-content/themes/mentorship/assets/scss:wp-content/themes/mentorship/assets/css",
+    "theme:watch": "npx sass --watch wp-content/themes/mentorship/assets/scss:wp-content/themes/mentorship/assets/css",
     "build": "npm run css:build && npm run js:build",
     "build:netlify": "npm run build && npm run build:static",
     "build:static": "node scripts/build-static.js",
-    "css:build": "sass wp-content/themes/mentorship/assets/scss/style.scss wp-content/themes/mentorship/style.css --style compressed",
+    "css:build": "npx sass wp-content/themes/mentorship/assets/scss/style.scss wp-content/themes/mentorship/style.css --style compressed",
     "js:build": "webpack --mode production",
-    "css:dev": "sass wp-content/themes/mentorship/assets/scss/style.scss wp-content/themes/mentorship/style.css --style expanded --source-map",
+    "css:dev": "npx sass wp-content/themes/mentorship/assets/scss/style.scss wp-content/themes/mentorship/style.css --style expanded --source-map",
     "js:dev": "webpack --mode development --watch"
   },
   "keywords": [
@@ -28,19 +28,17 @@
   ],
   "author": "Your Name",
   "license": "GPL-2.0",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "mini-css-extract-plugin": "^2.7.6",
-    "sass-loader": "^13.3.2"
-  },
-  "dependencies": {
     "bootstrap": "^5.3.0",
+    "css-loader": "^6.8.1",
     "jquery": "^3.7.1",
+    "mini-css-extract-plugin": "^2.7.6",
     "puppeteer": "^24.34.0",
     "sass": "^1.69.0",
+    "sass-loader": "^13.3.2",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4"
   },
